--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.7",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.7.9",
+    "firebase": "^11.3.1",
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
